@@ -7,16 +7,16 @@
 #endif
 #if defined (DUMP)
 static const char sccsid[] USED =
-	"@(#)/usr/ucb/otfdump.sl	6.17 (gritter) 3/13/06";
+	"@(#)/usr/ucb/otfdump.sl	6.18 (gritter) 3/13/06";
 #elif defined (DPOST)
-static const char sccsid[] USED = "@(#)dpost.sl  6.17 (gritter) 3/13/06";
-const char creator[] = "Heirloom Documentation Tools - dpost 6.17 (gritter) 3/13/06";
+static const char sccsid[] USED = "@(#)dpost.sl  6.18 (gritter) 3/13/06";
+const char creator[] = "Heirloom Documentation Tools - dpost 6.18 (gritter) 3/13/06";
 #elif defined (NROFF)
-static const char sccsid[] USED = "@(#)/usr/ucb/nroff.sl	6.17 (gritter) 3/13/06";
+static const char sccsid[] USED = "@(#)/usr/ucb/nroff.sl	6.18 (gritter) 3/13/06";
 #else	/* !DUMP, !NROFF */
-static const char sccsid[] USED = "@(#)/usr/ucb/troff.sl	6.17 (gritter) 3/13/06";
+static const char sccsid[] USED = "@(#)/usr/ucb/troff.sl	6.18 (gritter) 3/13/06";
 #endif	/* !DUMP, !NROFF */
-const char revision[] = "6.17";
+const char revision[] = "6.18";
 /* SLIST */
 /*
 calloc.c: * Sccsid @(#)calloc.c	1.3 (gritter) 8/26/05
@@ -45,11 +45,11 @@ troff.d/afm.h: * Sccsid @(#)afm.h	1.25 (gritter) 3/3/06
 troff.d/dev.h: * Sccsid @(#)dev.h	1.10 (gritter) 3/10/06
 troff.d/draw.c: * Sccsid @(#)draw.c	1.3 (gritter) 8/8/05
 troff.d/makedev.c: * Sccsid @(#)makedev.c	1.12 (gritter) 3/10/06
-troff.d/otf.c: * Sccsid @(#)otf.c	1.44 (gritter) 3/13/06
+troff.d/otf.c: * Sccsid @(#)otf.c	1.45 (gritter) 3/13/06
 troff.d/otfdump.c: * Sccsid @(#)otfdump.c	1.12 (gritter) 3/13/06
 troff.d/proto.h: * Sccsid @(#)proto.h	1.39 (gritter) 3/13/06
 troff.d/t10.c: * Sccsid @(#)t10.c	1.64 (gritter) 3/13/06
-troff.d/t6.c: * Sccsid @(#)t6.c	1.126 (gritter) 3/13/06
+troff.d/t6.c: * Sccsid @(#)t6.c	1.127 (gritter) 3/13/06
 troff.d/troff.h: * Sccsid @(#)troff.h	1.21 (gritter) 2/5/06
 troff.d/unimap.c: * Sccsid @(#)unimap.c	1.13 (gritter) 2/16/06
 troff.d/unimap.h: * Sccsid @(#)unimap.h	1.2 (gritter) 12/22/05
